--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1754,7 +1754,7 @@ body {
   color: #767676 !important;
 }
 .cid-r01rcZqkRm {
-  background-image: url("../../../assets/images/background1.jpg");
+  background-image: url("../../../assets/images/untitled-1-523x307.png");
 }
 .cid-r01rcZqkRm h1 {
   color: #616161;
@@ -1766,6 +1766,16 @@ body {
 }
 .cid-r01rcZqkRm .mbr-section-subtitle {
   font-style: italic;
+}
+.cid-r01rcZqkRm H1 {
+  text-align: center;
+}
+.cid-r01rcZqkRm H3 {
+  text-align: left;
+}
+.cid-r01rcZqkRm P {
+  text-align: center;
+  color: #232323;
 }
 .cid-r01rwEcQs5 {
   padding-top: 45px;
@@ -2042,76 +2052,75 @@ body {
 .cid-r01rwEcQs5 .content-slider-wrap {
   width: 60%;
 }
-.cid-r01s4sN6mV {
-  padding-top: 90px;
-  padding-bottom: 90px;
+.cid-r01rwEcQs5 P {
+  text-align: center;
+}
+.cid-r02H9YBWTf {
+  padding-top: 75px;
+  padding-bottom: 75px;
   background-color: #ffffff;
 }
-.cid-r01s4sN6mV .mbr-section-subtitle {
-  color: #767676;
+.cid-r02H9YBWTf .mbr-slider .carousel-control {
+  background: #1b1b1b;
 }
-.cid-r01s4sN6mV .media-container-row {
-  -webkit-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
+.cid-r02H9YBWTf .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
 }
-.cid-r01s4sN6mV .mbr-text {
-  color: #767676;
+.cid-r02H9YBWTf .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
 }
-.cid-r01s4sN6mV .mbr-author-desc {
-  display: block;
-  color: #767676;
+.cid-r02H9YBWTf .mbr-slider .modal-body .close {
+  background: #1b1b1b;
 }
-.cid-r01s4sN6mV .mbr-author-name {
-  color: #767676;
-}
-.cid-r01s4sN6mV .mbr-testimonial .panel-item {
-  background-color: #ffffff;
-}
-.cid-r01s4sN6mV .mbr-testimonial .card-block {
-  -webkit-flex-grow: 0;
-  flex-grow: 0;
-  padding: 2.4rem 2.4rem 0 2.4rem;
-}
-.cid-r01s4sN6mV .mbr-testimonial .card-block .testimonial-photo {
-  display: inline-block;
-  width: 120px;
-  height: 120px;
-  margin-bottom: 1.6rem;
-  overflow: hidden;
-  border-radius: 50%;
-}
-.cid-r01s4sN6mV .mbr-testimonial .card-block .testimonial-photo img {
+.cid-r02H9YBWTf .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
   width: 100%;
-  min-width: 100%;
-  min-height: 100%;
+  height: 100%;
+  background: #5b686b;
+  background: linear-gradient(to left, #5b686b, #45505b) !important;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
 }
-.cid-r01s4sN6mV .mbr-testimonial .card-footer {
-  padding-bottom: 2.4rem;
-  border-top: 0;
-  padding-top: 1rem;
-  word-wrap: break-word;
-  word-break: break-word;
-  background: none;
+.cid-r02H9YBWTf .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+  background: transparent !important;
 }
-@media (max-width: 300px) {
-  .cid-r01s4sN6mV .testimonial-photo {
-    width: 100% !important;
-    height: auto !important;
-  }
+.cid-r02H9YBWTf .mbr-gallery-item > div:hover:before {
+  opacity: 0.7 !important;
 }
-.cid-r01ryC5kIK {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #ffffff;
+.cid-r02H9YBWTf .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
 }
-.cid-r01ryC5kIK .mbr-section-subtitle {
-  color: #767676;
+.cid-r02H9YBWTf .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #5b686b !important;
+  background: linear-gradient(to left, #5b686b, #45505b) !important;
+  opacity: 0.7;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
 }
 .cid-r01rYOr2yA {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: #ffffff;
+  background-color: #efefef;
 }
 .cid-r01rYOr2yA .title {
   margin-bottom: 2rem;
@@ -2230,51 +2239,6 @@ body {
 @media (min-width: 769px) {
   .cid-r01rZWxamD .mbr-subscribe > * {
     margin: 0 0.5rem;
-  }
-}
-.cid-r01s2aOyx8 {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #ffffff;
-}
-.cid-r01s2aOyx8 .socicon-bg-facebook {
-  background: #3e5b98;
-  color: #ffffff;
-}
-.cid-r01s2aOyx8 .socicon-bg-twitter {
-  background: #4da7de;
-  color: #ffffff;
-}
-.cid-r01s2aOyx8 .socicon-bg-googleplus {
-  background: #dd4b39;
-  color: #ffffff;
-}
-.cid-r01s2aOyx8 .socicon-bg-vkontakte {
-  background: #5a7fa6;
-  color: #ffffff;
-}
-.cid-r01s2aOyx8 .socicon-bg-odnoklassniki {
-  background: #f48420;
-  color: #ffffff;
-}
-.cid-r01s2aOyx8 .socicon-bg-pinterest {
-  background: #c92619;
-  color: #ffffff;
-}
-.cid-r01s2aOyx8 .socicon-bg-mail {
-  background: #134785;
-  color: #ffffff;
-}
-.cid-r01s2aOyx8 .btn-social {
-  border: none !important;
-}
-.cid-r01s2aOyx8 [class^="socicon-"]:before,
-.cid-r01s2aOyx8 [class*=" socicon-"]:before {
-  line-height: 44px;
-}
-@media (max-width: 767px) {
-  .cid-r01s2aOyx8 .btn {
-    font-size: 20px !important;
   }
 }
 .cid-r01s70tHiJ {
